fix problem in IE7 where confirm boxes stretch to full window height

--- a/src/stylesheets/boxy.css
+++ b/src/stylesheets/boxy.css
@@ -1,4 +1,4 @@
-.boxy-wrapper { position: absolute; }
+.boxy-wrapper { position: absolute; min-height: 1px;}
 .boxy-wrapper.fixed { position: fixed; }
 
   /* Modal */
